# taiga-deadline-calendar

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  settings.py
deadline-calendar/: functions.py  routers.py
deadline_calendar/: functions.py  main.py  responses.py  routers.py  taiga_interface.py
modules/: interfaces.py  routers.py
src/: cache_functions.py  caching.py  formatting.py  functions.py  main.py  responses.py  routers.py  taiga_interface.py
src/tests/: functions_test.py
tests/: cache_functions_test.py  formatting_test.py
