[tool.poetry]
name = "deadline-calendar"
version = "0.2.1"
description = "Calendar with deadlines from Taiga."
authors = ["Leon <limiroshnichenko@miem.hse.ru>"]
readme = "README.md"
packages = [{include = "deadline_calendar"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
aioredis = "^2.0.1"
httpx = "^0.23.0"
icalendar = "^5.0.2"
python-dotenv = "^0.21.0"
pytz = "^2022.6"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
